--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "bcrypt": "^0.8.0",
     "coffee-script": "^1.8.0",
     "d3": "^3.4.13",
     "ejs": "~0.8.4",
@@ -21,6 +22,8 @@
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
     "rc": "~0.5.0",
     "sails": "~0.10.5",
     "sails-disk": "~0.10.0",
