--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "rc": "~0.5.0",
     "sails": "~0.10.5",
     "sails-disk": "~0.10.0",
-    "waterlock": "0.0.14",
+    "waterlock": "git+https://git@github.com/Globegitter/waterlock.git#return-jwt-no-redirect",
     "waterlock-local-auth": "0.0.5",
     "zmq": "^2.8.0"
   },
