--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
+    "memory-cache": "0.0.5",
     "rc": "~0.5.0",
     "request": "^2.51.0",
     "sails": "~0.10.5",
