--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "include-all": "~0.1.3",
     "limiter": "^1.0.5",
     "node-cache": "^1.1.0",
+    "node-schedule": "^0.1.16",
     "rc": "~0.5.0",
     "request": "^2.51.0",
     "sails": "~0.10.5",
