--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "url": "git://github.com/abis_m/analysis.git"
   },
   "author": "abis_m",
-  "license": ""
+  "license": "",
+  "devDependencies": {
+    "chai": "^2.1.2"
+  }
 }
