Revert "orders cannot be tested during the weekend"
This reverts commit 7caecfa7d72b303ad25e928065632048ce958aef.

Revert "use sails.log instead of console"

This reverts commit 9917fa0b08be068bd0faf41ba3733e6fcd3ba6b3.

Revert "add signal controller test"

This reverts commit a430f1153d892b7342ff201f9bcd0a74cd5f4c61.

Revert "test the instrument controller"

This reverts commit 383352ae2a591cc6c100a891702e7c164bfb3505.

Revert "fix extra deleted lines"

This reverts commit 587222bbb06e6c9d1f8a5ea79c46240a132b1456.

Revert "remove code duplication for oanda token headers"

This reverts commit b31692cdb2cedea2e04d999b2bf1b90f1a802022.

Revert "add tests for forbidden paths without token"

This reverts commit 80750b7ab5dd1782546ba72f44c10e0f2de2b901.

Revert "cleanup the req.user before checking compliance to avoid injection of a fake user"

This reverts commit f9039e36b34051a2bd7b903884ec9ca8d7e79852.

Revert "updating users auth parameter doesnt work"

This reverts commit d3b19c711cf5b853838726049971c2cee25b8f69.

Revert "remove allparams"

This reverts commit 2fb8d034d52a352b13eb626401eda53e1e08367e.

Revert "start testing the user controller"

This reverts commit 3d301825b2dac736d35c89ffb69ccb4fa10a425c.

Revert "add supertest"

This reverts commit c5e9b7ce9d85e5e6948e2aec3086a11660f9ce4a.

Revert "user tested"

This reverts commit eedb9ec42aed84c0052b4cbfefdc16a9eb2b3738.

Revert "exec -> then"

This reverts commit 0d940e2811bf04f8e68f74a98023e4318e524f60.

Revert "create, find and destroy work"

This reverts commit f4366671a1fe3dad880fde943720e8230716ffd9.

Revert "destroying the auth as the user is destroyed is very difficult"

This reverts commit 821db2ac52d9e9324c349777aa8ce32c6e197331.

Revert "Start creating auth with model hooks"

This reverts commit e9ea2d2db98959ff1b68e96493c2cd637224513b.

Revert "start developing tests with mocha and chai"

This reverts commit c307fab4fc8fc0a0b481ec6ecb739af39c53bdd9.

--- a/package.json
+++ b/package.json
@@ -43,9 +43,5 @@
     "url": "git://github.com/abis_m/analysis.git"
   },
   "author": "abis_m",
-  "license": "",
-  "devDependencies": {
-    "chai": "^2.1.2",
-    "supertest": "^0.15.0"
-  }
+  "license": ""
 }
