--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
   "license": "",
   "devDependencies": {
     "chai": "^2.1.2",
+    "grunt-mocha-test": "^0.12.7",
+    "mocha": "^2.2.1",
     "supertest": "^0.15.0"
   }
 }
