--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
-    "limiter": "^1.0.5",
     "later": "^1.1.6",
+    "limiter": "^1.0.5",
     "node-cache": "^1.1.0",
     "rc": "~0.5.0",
-    "request": "^2.51.0",
+    "request-promise": "^0.4.1",
     "sails": "~0.10.5",
     "sails-disk": "~0.10.0",
     "waterlock": "git+https://git@github.com/Globegitter/waterlock.git#return-jwt-no-redirect",
