--- a/package.json
+++ b/package.json
@@ -5,35 +5,35 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
-    "bcrypt": "^0.8.0",
-    "bluebird": "^2.9.14",
-    "coffee-script": "^1.8.0",
-    "d3": "^3.4.13",
-    "ejs": "~0.8.4",
-    "grunt": "0.4.2",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-coffee": "~0.10.1",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-cssmin": "~0.9.0",
-    "grunt-contrib-jst": "~0.6.0",
-    "grunt-contrib-less": "0.11.1",
-    "grunt-contrib-uglify": "~0.4.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-sails-linker": "~0.9.5",
-    "grunt-sync": "~0.0.4",
-    "include-all": "~0.1.3",
+    "bcrypt": "^0.8.3",
+    "bluebird": "^2.9.32",
+    "coffee-script": "^1.9.3",
+    "d3": "^3.5.6",
+    "ejs": "^2.3.2",
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-coffee": "^0.13.0",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-cssmin": "^0.12.3",
+    "grunt-contrib-jst": "^0.6.0",
+    "grunt-contrib-less": "^1.0.1",
+    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-sails-linker": "^0.10.1",
+    "grunt-sync": "^0.2.3",
+    "include-all": "^0.1.6",
     "later": "^1.1.6",
     "limiter": "^1.0.5",
-    "node-cache": "^1.1.0",
-    "rc": "~0.5.0",
-    "request-promise": "^0.4.1",
-    "sails": "~0.10.5",
-    "sails-disk": "~0.10.0",
-    "sails-postgresql": "^0.10.14",
-    "waterlock": "git+https://git@github.com/Globegitter/waterlock.git#return-jwt-no-redirect",
-    "waterlock-local-auth": "0.0.5",
-    "zmq": "^2.9.0"
+    "node-cache": "^3.0.0",
+    "rc": "^1.0.3",
+    "request-promise": "^0.4.2",
+    "sails": "^0.11.0",
+    "sails-disk": "^0.10.8",
+    "sails-postgresql": "^0.10.15",
+    "waterlock": "^0.1.0",
+    "waterlock-local-auth": "^0.0.6",
+    "zmq": "^2.11.1"
   },
   "scripts": {
     "start": "node app.js",
@@ -47,9 +47,9 @@
   "author": "abis_m",
   "license": "",
   "devDependencies": {
-    "chai": "^2.1.2",
+    "chai": "^3.0.0",
     "grunt-mocha-test": "^0.12.7",
-    "mocha": "^2.2.1",
-    "supertest": "^0.15.0"
+    "mocha": "^2.2.5",
+    "supertest": "^1.0.1"
   }
 }
