--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "chai": "^3.0.0",
     "grunt-mocha-test": "^0.12.7",
     "mocha": "^2.2.5",
-    "supertest": "^1.0.1"
+    "supertest": "^1.0.1",
+    "nodetime": "*"
   }
 }
